...
                        .font(.system(size: 14, weight: .semibold))
                        .foregroundColor(.primary)
                        .frame(width: 32, height: 32)
                        .background(Color(.systemBackground))
                        .clipShape(Circle())
                }
                .accessibilityIdentifier("AddGoalButton")
            }
            Text("Doelen")
                .font(.largeTitle).fontWeight(.bold)
        }
        .padding(.horizontal)
        .padding(.top, 56)
...
